[package]
name = "uq"
version = "0.1.2"
authors = ["Tamir Bahar"]
repository = "https://github.com/lostutils/uq"
license = "MIT"
description = "sort | uniq alternative."
readme = "README.md"

[dependencies]
clap = "2.29.2"
fxhash = "0.2"

[profile.release]
lto = true

[[bin]]
name = "uq"
path = "src/main.rs"
