[package]
name = "uq"
version = "0.1.3"
authors = ["Tamir Bahar"]
repository = "https://github.com/lostutils/uq"
license = "MIT"
description = "sort | uniq alternative."
readme = "README.md"

[dependencies]
clap = "2.31.2"
fxhash = "0.2"
regex = "1.0.0"
itertools = "0.7.8"
failure = "0.1.1"
failure_derive = "0.1.1"
serde_derive = "1.0.62"

[profile.release]
lto = true

[[bin]]
name = "uq"
path = "src/main.rs"
